--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pr-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,13 +14,15 @@
             color: rgb(0, 0, 255);
         }
         .container2{
+            margin-top: 120px;
             width: 600px;
             border: 2px solid red;
             margin-left: 620px;
             height: 300px;
             display: flex;
             border-radius: 50px;
-            background-color: rgba(0, 114, 15, 0.637);
+            background: linear-gradient(315deg, rgb(14, 199, 14), rgb(185, 10, 162));
+            box-shadow: 30px 30px 100px rgb(53, 6, 224);
         }
         .container{
             display: flex;
@@ -34,7 +36,7 @@
         }
         .card{
             height: 200px;
-            background-color: rgba(117, 12, 216, 0.705); 
+            background-color: rgba(117, 12, 216, 0.904); 
             margin-left: 660px;
             border: 3px solid red;
             border-radius: 30px;
@@ -43,7 +45,7 @@
         }
         .card1{
             height: 200px;
-            background-color: rgba(0, 255, 255, 0.692);
+            background-color: rgba(0, 255, 255, 0.801);
             margin-left: 10px;
             border: 3px solid red;
             border-radius: 30px;
@@ -51,22 +53,51 @@
             margin-top: 30px;
         }
         .card:hover{
-            background-color: rgba(17, 204, 17, 0.5);
+            background-color: rgb(17, 204, 17);
         }
         .card1:hover{
-            background-color: rgba(17, 201, 17, 0.5);
+            background-color: rgb(17, 201, 17);
         }
         .card:hover{
             cursor: pointer;
+            box-shadow: 0 0 100px rgb(41, 228, 4);
         }
         .card1:hover{
             cursor: pointer;
+            box-shadow: 0 0 100px rgb(40, 204, 40);
         }
         body{
-            background-image: url(https://s1.1zoom.me/big3/525/Dollars_Banknotes_Money_443093.jpg);
+            
+            background: linear-gradient(1000deg, rgb(21, 9, 192), rgb(201, 12, 12));
+        }    
+        .redes ul{
+            display: flex;
+            margin-left: 1500px;  
+            margin-top: 0px;
+            border: 2px solid rgb(190, 30, 30);
+            width: 190px; 
+            background: linear-gradient(200deg, rgb(190, 10, 10), rgb(224, 9, 224)); 
+            border-radius: 30px;
         }
-    </style>
+        .redes a{
+            padding: 2px;
+            display: flex;
+        }
+</style>
 <body>
+    <nav class="redes">
+        <ul>
+            <a href="https://www.facebook.com/lucas.dasilvamediato/" target="_blank">
+                <img src="img/facebook.png.png" alt="facebook">
+        </a>
+            <a href="https://www.instagram.com/luh.sil_/" target="_blank">
+                <img src="img/instagram2.png" alt="instagram">
+        </a>
+            <a href="https://www.linkedin.com/in/lucas-mediato-199b40219/" target="_blank">
+                <img src="img/linkedin.png.png" alt="linkedin">
+        </a>
+    </ul>
+    </nav>
     <div class="container2">
         <h1>Calcúladora de Salário</h1>
 </div>
