--- a/CalUm.html
+++ b/CalUm.html
@@ -15,8 +15,13 @@
 
     }
     .container1{
-        margin-left: 820px;
+        margin-left: 755px;
         margin-top: 50px;
+        border: 2px solid;
+        width: 350px;
+        height: 500px;
+        background: linear-gradient(400deg, rgb(47, 0, 255), rgb(0, 255, 64));
+        border-radius: 30px;
     }
     div a{
         padding: 35px;
@@ -32,27 +37,32 @@
     div a:hover{
         cursor: pointer;
     }
-    #nome{
+    #nome,::placeholder{
         margin: 15px;
-        margin-left: 20px;
+        margin-left: 24%;
+        margin-top: 40px;
+        padding: 8px;
+        border-radius: 20px;
+        border-color: rgb(6, 21, 223);
+        background-color: rgb(8, 115, 202);
+        color: white;
     }
-    #num1{
+    #num1, ::placeholder{
         margin: 15px;
-        margin-left: 20px;
+        margin-left: 25%;
     }
-    #num2{
+    #num2, ::placeholder{
         margin: 15px;
-        margin-left: 20px;
+        margin-left: 25%;
     }
-    #num3{
+    #num3, ::placeholder{
         margin: 15px;
-        margin-left: 20px;
+        margin-left: 25%;
     }
-    #botao{
+    #botao, ::placeholder{
         margin: 15px;
-        margin-left: 75px;
+        margin-left: 41%;
     }
-    
 </style>
 <body>
     <h1>Calculo</h1>
@@ -62,14 +72,11 @@
         </div>
     </div>
     <div class="container1">
-        <div class="texto"><input type="text" id="nome"></div>
-        <div class="texto1"><input type="number" id="num1"></div>
-        <div class="texto2"><input type="number" id="num2"></div>
-        <div class="texto3"><input type="number" id="num3"></div>
-        <div class="texto4"><input type="button" id="botao" value="Calcular" onclick="Calcular"></div>
+        <input type="text" id="nome" placeholder="Nome">
+        <input type="number" id="num1" placeholder="valor Hora">
+        <input type="number" id="num2" placeholder="Horas Trabalhadas">
+        <input type="number" id="num3" placeholder="Dependentes">
+        <input type="button" id="botao" value="Calcular" onclick="Calcular">
 </div>
-<script>
-
-</script>
 </body>
 </html>
