--- a/index.html
+++ b/index.html
@@ -4,86 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylepgpr.css">
     <title>PrimeiroSite</title>
 </head>
-    <style>
-        div h1{
-            text-align: center;
-            margin-top: 100px;
-            font: normal 60px arial;
-            color: rgb(0, 0, 255);
-        }
-        .container2{
-            margin-top: 120px;
-            width: 600px;
-            border: 2px solid red;
-            margin-left: 620px;
-            height: 300px;
-            display: flex;
-            border-radius: 50px;
-            background: linear-gradient(315deg, rgb(14, 199, 14), rgb(185, 10, 162));
-            box-shadow: 30px 30px 100px rgb(53, 6, 224);
-        }
-        .container{
-            display: flex;
-        }
-        div a{
-            text-decoration: none;
-            padding: 30px;
-            color: rgb(0, 21, 92);
-            display: flex;
-            margin-top: 55px;
-        }
-        .card{
-            height: 200px;
-            background-color: rgba(117, 12, 216, 0.904); 
-            margin-left: 660px;
-            border: 3px solid red;
-            border-radius: 30px;
-            transition: 0.8s;
-            margin-top: 30px;
-        }
-        .card1{
-            height: 200px;
-            background-color: rgba(0, 255, 255, 0.801);
-            margin-left: 10px;
-            border: 3px solid red;
-            border-radius: 30px;
-            transition: 0.8s;
-            margin-top: 30px;
-        }
-        .card:hover{
-            background-color: rgb(17, 204, 17);
-        }
-        .card1:hover{
-            background-color: rgb(17, 201, 17);
-        }
-        .card:hover{
-            cursor: pointer;
-            box-shadow: 0 0 100px rgb(41, 228, 4);
-        }
-        .card1:hover{
-            cursor: pointer;
-            box-shadow: 0 0 100px rgb(40, 204, 40);
-        }
-        body{
-            
-            background: linear-gradient(1000deg, rgb(21, 9, 192), rgb(201, 12, 12));
-        }    
-        .redes ul{
-            display: flex;
-            margin-left: 1500px;  
-            margin-top: 0px;
-            border: 2px solid rgb(190, 30, 30);
-            width: 190px; 
-            background: linear-gradient(200deg, rgb(190, 10, 10), rgb(224, 9, 224)); 
-            border-radius: 30px;
-        }
-        .redes a{
-            padding: 2px;
-            display: flex;
-        }
-</style>
 <body>
     <nav class="redes">
         <ul>
